Sample Application, test modules and description

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
 rootProject.name = 'java-test-comparison'
+include 'junit-mockito'
+include 'application'
+include 'junit-weld-dbunit'
+include 'arquillian-liberty'
 
